--- a/homegenie/Dockerfile
+++ b/homegenie/Dockerfile
@@ -3,6 +3,8 @@ FROM phusion/baseimage
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
 
+RUN apt-get remove purge lirc -y
+
 RUN apt-get update && apt-get install -y gdebi-core usbutils && apt-get clean -y
 
 ADD http://downloads.sourceforge.net/project/homegenie/homegenie-beta_1.1.r525_all.deb /tmp/
