--- a/homegenie/Dockerfile
+++ b/homegenie/Dockerfile
@@ -3,11 +3,13 @@ FROM phusion/baseimage
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
 
-RUN apt-get update && apt-get install -y gdebi-core usbutils && apt-get clean -y
+#Add key 
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+RUN echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
 
-RUN apt-get remove -y lirc
+RUN apt-get update && apt-get install -y gdebi-core usbutils ca-certificates-mono && apt-get clean -y
 
-ADD http://downloads.sourceforge.net/project/homegenie/homegenie-beta_1.1.r525_all.deb /tmp/
+ADD homegenie-beta_1.1.r525_all.deb /tmp/
 
 RUN gdebi --non-interactive /tmp/homegenie-beta_1.1.r525_all.deb 
 
