adding no-install-recommends

--- a/homegenie/Dockerfile
+++ b/homegenie/Dockerfile
@@ -3,7 +3,7 @@ FROM phusion/baseimage
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
 
-RUN apt-get update && apt-get install -y gdebi-core usbutils ca-certificates-mono && apt-get clean -y
+RUN apt-get update && apt-get install -y --no-install-recommends gdebi-core usbutils ca-certificates-mono && apt-get clean -y
 
 ADD homegenie-beta_1.1.r525_all.deb /tmp/
 
