--- a/homegenie/Dockerfile
+++ b/homegenie/Dockerfile
@@ -12,11 +12,12 @@ ADD homegenie-beta_1.1.r526_all.deb /tmp/
 
 RUN gdebi --non-interactive /tmp/homegenie-beta_1.1.r526_all.deb 
 
-RUN mkdir /etc/service/homegenie
+#RUN mkdir /etc/service/homegenie
 
-ADD homegenie.runit /etc/service/homegenie/run
+ADD homegenie.runit /usr/local/bin/run
 
-RUN chmod +x /etc/service/homegenie/run
+#RUN chmod +x /etc/service/homegenie/run
+RUN chmod -R 777 /usr/local/bin/homegenie
 
 # cleanup
 RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
