--- a/unraid-ha-bridge/Dockerfile
+++ b/unraid-ha-bridge/Dockerfile
@@ -8,3 +8,4 @@ VOLUME ["/config"]
 COPY firstrun.sh /etc/my_init.d/firstrun.sh
 
 RUN chmod +x /etc/my_init.d/firstrun.sh
+CMD ["/etc/my_init.d/firstrun.sh"]
